# watermark-removal-mcp

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  run-mcp.ps1  run-mcp.sh
.github/workflows/: release.yml
scripts/: images_to_pdf.py  pdf_to_images.py  process_pdf.py  process_pdf_to_images.py  remove_watermark.py  requirements.txt
src/: lib.rs  main.rs  message_processor.rs
src/tools/: images_to_pdf.rs  mod.rs  pdf_to_images.rs  process_pdf.rs  remove_watermark.rs
