[package]
edition = "2024"
name = "watermark-remover-mcp-server"
version = "0.1.0"

[[bin]]
name = "watermark-remover-mcp-server"
path = "src/main.rs"

[lib]
name = "watermark_remover_mcp_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
mcp-types = { package = "codex-mcp-types", version = "0.63.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
